Added Identity and changed _Layout.cshtml

--- a/Webshop/appsettings.json
+++ b/Webshop/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebshopContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Webshop;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
