Added the classes User,Product and Cart. Their folders in View Also added the ViewModels for each Class. They're empty per request

--- a/Webshop/Webshop.csproj
+++ b/Webshop/Webshop.csproj
@@ -12,6 +12,9 @@
 
   <ItemGroup>
     <Folder Include="Areas\Identity\Services\" />
+    <Folder Include="Views\Cart\" />
+    <Folder Include="Views\Product\" />
+    <Folder Include="Views\User\" />
   </ItemGroup>
 
 </Project>
