Removed the svg from the standard mvc model

--- a/Webshop/Webshop.csproj
+++ b/Webshop/Webshop.csproj
@@ -15,6 +15,7 @@
     <Folder Include="Views\Cart\" />
     <Folder Include="Views\Product\" />
     <Folder Include="Views\User\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
